Add new routes to api-docs
